theora-java/src/net/sf/theora_java/jna/VorbisLibrary.java


    			      NativeLong /*long*/ max_bitrate,
    			      NativeLong /*long*/ nominal_bitrate,
    			      NativeLong /*long*/ min_bitrate);

    int vorbis_encode_setup_managed(vorbis_info vi,
    				       NativeLong /*long*/ channels,
    				       NativeLong /*long*/ rate,

    				       NativeLong /*long*/ max_bitrate,
    				       NativeLong /*long*/ nominal_bitrate,
    				       NativeLong /*long*/ min_bitrate);

    int vorbis_encode_setup_vbr(vorbis_info vi,
    				  NativeLong /*long*/ channels,
    				  NativeLong /*long*/ rate,

    				  float quality /* quality level from 0. (lo) to 1. (hi) */
    				  );

    int vorbis_encode_init_vbr(vorbis_info vi,
    				  NativeLong /*long*/ channels,
    				  NativeLong /*long*/ rate,

    				  float base_quality /* quality level from 0. (lo) to 1. (hi) */
    				  );

    int vorbis_encode_setup_init(vorbis_info vi);

    int vorbis_encode_ctl(vorbis_info vi,int number,Pointer /*void**/ arg);

      /* deprecated rate management supported only for compatability */
    public static final int OV_ECTL_RATEMANAGE_GET       =0x10;
    public static final int OV_ECTL_RATEMANAGE_SET       =0x11;
    public static final int OV_ECTL_RATEMANAGE_AVG       =0x12;
    public static final int OV_ECTL_RATEMANAGE_HARD      =0x13;

    public static class ovectl_ratemanage_arg extends Structure
	{
    	public int    management_active;

    	public NativeLong /*long*/   bitrate_hard_min;
    	public NativeLong /*long*/   bitrate_hard_max;
    	public double bitrate_hard_window;

    	public NativeLong /*long*/   bitrate_av_lo;
    	public NativeLong /*long*/   bitrate_av_hi;
    	public double bitrate_av_window;
    	public double bitrate_av_window_center;
    }


      /* new rate setup */
    public static final int OV_ECTL_RATEMANAGE2_GET      =0x14;
    public static final int OV_ECTL_RATEMANAGE2_SET      =0x15;

    public static class ovectl_ratemanage2_arg extends Structure
	{
    	public int    management_active;

    	public NativeLong /*long*/   bitrate_limit_min_kbps;
    	public NativeLong /*long*/   bitrate_limit_max_kbps;
    	public NativeLong /*long*/   bitrate_limit_reservoir_bits;
    	public double bitrate_limit_reservoir_bias;

    	public NativeLong /*long*/   bitrate_average_kbps;
    	public double bitrate_average_damping;
    }



    public static final int OV_ECTL_LOWPASS_GET          =0x20;
    public static final int OV_ECTL_LOWPASS_SET          =0x21;

    public static final int OV_ECTL_IBLOCK_GET           =0x30;
    public static final int OV_ECTL_IBLOCK_SET           =0x31;

//    #ifdef __cplusplus
//    }
//    #endif /* __cplusplus */
//
//    #endif



    
    // vorbisfile.h:
    
    /********************************************************************
     *                                                                  *
     * THIS FILE IS PART OF THE OggVorbis SOFTWARE CODEC SOURCE CODE.   *
     * USE, DISTRIBUTION AND REPRODUCTION OF THIS LIBRARY SOURCE IS     *
     * GOVERNED BY A BSD-STYLE SOURCE LICENSE INCLUDED WITH THIS SOURCE *
     * IN 'COPYING'. PLEASE READ THESE TERMS BEFORE DISTRIBUTING.       *
     *                                                                  *
     * THE OggVorbis SOURCE CODE IS (C) COPYRIGHT 1994-2001             *
     * by the XIPHOPHORUS Company http://www.xiph.org/                  *
     *                                                                  *
     ********************************************************************

     function: stdio-based convenience library for opening/seeking/decoding
     last mod: $Id: VorbisLibrary.java,v 1.1 2007/08/28 15:48:21 kenlars99 Exp $

     ********************************************************************/
//
//    #ifndef _OV_FILE_H_
//    #define _OV_FILE_H_
//
//    #ifdef __cplusplus
//    extern "C"
//    {
//    #endif /* __cplusplus */
//
//    #include <stdio.h>
//    #include "codec.h"

    /* The function prototypes for the callbacks are basically the same as for
     * the stdio functions fread, fseek, fclose, ftell.
     * The one difference is that the FILE * arguments have been replaced with
     * a void * - this is to be used as a pointer to whatever internal data these
     * functions might need. In the stdio case, it's just a FILE * cast to a void *
     *
     * If you use other functions, check the docs for these functions and return
     * the right values. For seek_func(), you *MUST* return -1 if the stream is
     * unseekable
     */
    public static class ov_callbacks extends Structure
	{
    	// TODO: use JNA callbacks:
    	public Pointer read_func;//size_t (*read_func)  (void *ptr, size_t size, size_t nmemb, void *datasource);
    	public Pointer seek_func;//int    (*seek_func)  (void *datasource, long /*ogg_int64_t*/ offset, int whence);
    	public Pointer close_func;//int    (*close_func) (void *datasource);
    	public Pointer tell_func;//long   (*tell_func)  (void *datasource);
    }

    public static final int  NOTOPEN   =0;
    public static final int  PARTOPEN  =1;
    public static final int  OPENED    =2;
    public static final int  STREAMSET =3;
    public static final int  INITSET   =4;

    public static class OggVorbis_File extends Structure
	{
    	public Pointer /*void            **/datasource; /* Pointer to a FILE *, etc. */
    	public int              seekable;
    	public long /*ogg_int64_t*/      offset;
    	public long /*ogg_int64_t*/      end;
    	public ogg_sync_state   oy;

      /* If the FILE handle isn't seekable (eg, a pipe), only the current
         stream appears */
    	public int              links;
    	public Pointer /*ogg_int64_t**/    offsets;
    	public Pointer /*ogg_int64_t**/     dataoffsets;
    	public Pointer /*long**/            serialnos;
    	public Pointer /*ogg_int64_t**/     pcmlengths; /* overloaded to maintain binary
    				  compatability; x2 size, stores both
    				  beginning and end values */
    	public Pointer /*vorbis_info     **/ vi;
    	public Pointer /*vorbis_comment  **/ vc;

      /* Decoding working state local storage */
    	public long /*ogg_int64_t*/      pcm_offset;
    	public int              ready_state;
    	public NativeLong /*long*/             current_serialno;
    	public int              current_link;

    	public double           bittrack;
    	public double           samptrack;

    	public ogg_stream_state os; /* take physical pages, weld into a logical
                              stream of packets */
    	public vorbis_dsp_state vd; /* central working state for the packet->PCM decoder */
    	public vorbis_block     vb; /* local working space for packet->PCM decode */

    	public ov_callbacks callbacks;

    }

    int ov_clear(OggVorbis_File vf);
    int ov_open(Pointer /*FILE **/f,OggVorbis_File vf,Pointer /*char **/ initial,NativeLong /*long*/ ibytes);
    int ov_open_callbacks(Pointer /*void**/ datasource, OggVorbis_File vf,
    		Pointer /*char **/ initial, NativeLong /*long*/ ibytes, ov_callbacks callbacks);

    int ov_test(Pointer /*FILE **/f,OggVorbis_File vf,Pointer /*char **/ initial,NativeLong /*long*/ ibytes);
    int ov_test_callbacks(Pointer /*void**/ datasource, OggVorbis_File vf,
    		Pointer /*char **/ initial, NativeLong /*long*/ ibytes, ov_callbacks callbacks);
    int ov_test_open(OggVorbis_File vf);

    NativeLong /*long*/ ov_bitrate(OggVorbis_File vf,int i);
    NativeLong /*long*/ ov_bitrate_instant(OggVorbis_File vf);
    NativeLong /*long*/ ov_streams(OggVorbis_File vf);
    NativeLong /*long*/ ov_seekable(OggVorbis_File vf);
    NativeLong /*long*/ ov_serialnumber(OggVorbis_File vf,int i);

    long /*ogg_int64_t*/ ov_raw_total(OggVorbis_File vf,int i);
    long /*ogg_int64_t*/ ov_pcm_total(OggVorbis_File vf,int i);
    double ov_time_total(OggVorbis_File vf,int i);

    int ov_raw_seek(OggVorbis_File vf,long /*ogg_int64_t*/ pos);
    int ov_pcm_seek(OggVorbis_File vf,long /*ogg_int64_t*/ pos);
    int ov_pcm_seek_page(OggVorbis_File vf,long /*ogg_int64_t*/ pos);
    int ov_time_seek(OggVorbis_File vf,double pos);
    int ov_time_seek_page(OggVorbis_File vf,double pos);

    int ov_raw_seek_lap(OggVorbis_File vf,long /*ogg_int64_t*/ pos);
    int ov_pcm_seek_lap(OggVorbis_File vf,long /*ogg_int64_t*/ pos);
    int ov_pcm_seek_page_lap(OggVorbis_File vf,long /*ogg_int64_t*/ pos);
    int ov_time_seek_lap(OggVorbis_File vf,double pos);
    int ov_time_seek_page_lap(OggVorbis_File vf,double pos);

    long /*ogg_int64_t*/ ov_raw_tell(OggVorbis_File vf);
    long /*ogg_int64_t*/ ov_pcm_tell(OggVorbis_File vf);
    double ov_time_tell(OggVorbis_File vf);

    vorbis_info ov_info(OggVorbis_File vf,int link);
    vorbis_comment ov_comment(OggVorbis_File vf,int link);

    NativeLong /*long*/ ov_read_float(OggVorbis_File vf,Pointer /*float ****/ pcm_channels,int samples,
    			  Pointer/*int **/bitstream);
    NativeLong /*long*/ ov_read(OggVorbis_File vf,Pointer /*char **/ buffer,int length,
    		    int bigendianp,int word,int sgned,Pointer /*int **/ bitstream);
    int ov_crosslap(OggVorbis_File vf1,OggVorbis_File vf2);

    int ov_halfrate(OggVorbis_File vf,int flag);
    int ov_halfrate_p(OggVorbis_File vf);

//    #ifdef __cplusplus
//    }
//    #endif /* __cplusplus */
//
//    #endif



    
}
